--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -37,13 +37,7 @@
   padding: 100px;
 }
 
-/* Media query for phone screens */
-@media (max-width: 480px) {
-  h1 {
-    font-size: 0.5rem;
-  }
-
-  h3 {
-    font-size: 1.25rem;
-  }
+.landing .landing-content h1 {
+  margin-top: 0;
+  font-size: 1.15rem;
 }
