--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -39,5 +39,15 @@
 
 .landing .landing-content h1 {
   margin-top: 0;
-  font-size: 1.15rem;
+}
+
+/* Media query for smaller screens */
+@media (max-width: 768px) {
+  h1 {
+    font-size: 1.75rem;
+  }
+
+  h3 {
+    font-size: 1.25rem;
+  }
 }
