correct beer cheese post

--- a/_includes/beer_cheese_festival_image_map.html
+++ b/_includes/beer_cheese_festival_image_map.html
@@ -1,6 +1,6 @@
 <center>
   <img
-    src="/photos/uploads/blue_stallion_brewery_collage3.png"
+    src="/photos/uploads/beer_cheese_festival.png"
     width="440"
     height="440"
     border="0"
@@ -8,21 +8,25 @@
   />
 
   <map name="map">
-    <area shape="rect" coords="4,3,257,436" href="/photos/uploads/image.jpg" />
     <area
       shape="rect"
-      coords="265,4,436,143"
-      href="/photos/uploads/PXL_20230715_215002966.jpg"
+      coords="4,154,217,289"
+      href="/photos/uploads/PXL_20230610_crowds.jpg"
     />
     <area
       shape="rect"
-      coords="261,149,437,292"
-      href="/photos/uploads/PXL_20230715_221103283.jpg"
+      coords="4,295,217,436"
+      href="/photos/uploads/PXL_20230610_dolcimer.jpg"
     />
     <area
       shape="rect"
-      coords="263,294,436,435"
-      href="/photos/uploads/PXL_20230715_222002742.PORTRAIT.jpg"
+      coords="220,2,434,151"
+      href="/photos/uploads/PXL_20230610_blvd_sign.jpg"
+    />
+    <area
+      shape="rect"
+      coords="223,156,434,438"
+      href="/photos/uploads/PXL_20230610_165422542.MP.jpg"
     />
   </map>
 </center>
