--- a/_layouts/digital_maps.html
+++ b/_layouts/digital_maps.html
@@ -6,7 +6,7 @@ layout: page
 
 <!-- role="list" needed so that `list-style: none` in Safari doesn't remove the list semantics -->
 <ul class="posts-list list-unstyled" role="list">
-  {% for post in posts reversed%}
+  {% for post in posts reversed %}
   <li class="post-preview">
     <article>
       {%- capture thumbnail -%} {% if post.thumbnail-img %} {{
@@ -16,13 +16,13 @@ layout: page
       assign thumbnail=thumbnail | strip %} {% if site.feed_show_excerpt ==
       false %} {% if thumbnail != "" %}
       <div class="post-image post-image-normal">
-        <a href="{{ post.url | relative_url }}" aria-label="Thumbnail">
-          <img src="{{ thumbnail | relative_url }}" alt="Post thumbnail" />
+        <a href="{{ post.url | absolute_url }}" aria-label="Thumbnail">
+          <img src="{{ thumbnail | absolute_url }}" alt="Post thumbnail" />
         </a>
       </div>
       {% endif %} {% endif %}
 
-      <a href="{{ post.url | relative_url }}">
+      <a href="{{ post.url | absolute_url }}">
         <h2 class="post-title">{{ post.title | strip_html }}</h2>
 
         {% if post.subtitle %}
@@ -32,21 +32,20 @@ layout: page
 
       <p class="post-meta">
         {% assign date_format = site.date_format | default: "%B %-d, %Y" %}
-        <!--Posted on {{ post.date | date: date_format }}-->
+        Posted on {{ post.date | date: date_format }}
       </p>
 
-      <p></p>
       {% if thumbnail != "" %}
       <div class="post-image post-image-small">
-        <a href="{{ post.url | relative_url }}" aria-label="Thumbnail">
-          <img src="{{ thumbnail | relative_url }}" alt="Post thumbnail" />
+        <a href="{{ post.url | absolute_url }}" aria-label="Thumbnail">
+          <img src="{{ thumbnail | absolute_url }}" alt="Post thumbnail" />
         </a>
       </div>
       {% endif %} {% unless site.feed_show_excerpt == false %} {% if thumbnail
       != "" %}
       <div class="post-image post-image-short">
-        <a href="{{ post.url | relative_url }}" aria-label="Thumbnail">
-          <img src="{{ thumbnail | relative_url }}" alt="Post thumbnail" />
+        <a href="{{ post.url | absolute_url }}" aria-label="Thumbnail">
+          <img src="{{ thumbnail | absolute_url }}" alt="Post thumbnail" />
         </a>
       </div>
       {% endif %}
@@ -56,7 +55,7 @@ layout: page
         post.excerpt | strip_html | truncatewords: excerpt_length }} {% assign
         excerpt_word_count = post.excerpt | number_of_words %} {% if
         post.content != post.excerpt or excerpt_word_count > excerpt_length %}
-        <a href="{{ post.url | relative_url }}" class="post-read-more"
+        <a href="{{ post.url | absolute_url }}" class="post-read-more"
           >[Read&nbsp;More]</a
         >
         {% endif %}
@@ -64,11 +63,12 @@ layout: page
       {% endunless %} {% if site.feed_show_tags != false and post.tags.size > 0
       %}
       <div class="blog-tags">
-        <span class="tags-label">Tags:</span>
-        <ul class="tags-list d-inline list-inline" role="list">
+        <span>Tags:</span>
+        <!-- role="list" needed so that `list-style: none` in Safari doesn't remove the list semantics -->
+        <ul class="d-inline list-inline" role="list">
           {% for tag in post.tags %}
           <li class="list-inline-item">
-            <a href="{{ '/tags' | relative_url }}#{{- tag -}}">{{- tag -}}</a>
+            <a href="{{ '/tags' | absolute_url }}#{{- tag -}}">{{- tag -}}</a>
           </li>
           {% endfor %}
         </ul>
@@ -85,13 +85,13 @@ layout: page
   <li class="page-item previous">
     <a
       class="page-link"
-      href="{{ paginator.previous_page_path | relative_url }}"
+      href="{{ paginator.previous_page_path | absolute_url }}"
       >&larr; Newer Posts</a
     >
   </li>
   {% endif %} {% if paginator.next_page %}
   <li class="page-item next">
-    <a class="page-link" href="{{ paginator.next_page_path | relative_url }}"
+    <a class="page-link" href="{{ paginator.next_page_path | absolute_url }}"
       >Older Posts &rarr;</a
     >
   </li>
