--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -518,7 +518,8 @@ footer .footer-custom-content {
 .post-preview .post-image:hover {
   filter: grayscale(0%);
 }
-.post-preview .post-image img {
+.post-preview .post-image img {  
+  margin-top: 2rem;
   max-height: 100%;
   max-width: 100%;
 }
@@ -543,6 +544,7 @@ footer .footer-custom-content {
 .post-preview .post-image-small img {
   max-width: 6.25rem;
   max-height: 6.25rem;
+
 }
 @media (max-width: 500px) {
   .post-preview .post-image {
@@ -729,7 +731,7 @@ nav.top-nav-short-permanent ~ header > .intro-header.big-img {
     padding: 9.375rem 0;
   }
   .intro-header .page-heading h1 {
-    font-size: 4rem;
+    font-size: 3rem;
   }
   .intro-header .post-heading h1 {
     font-size: 2.125rem;
