--- a/_includes/photo-gallery.html
+++ b/_includes/photo-gallery.html
@@ -1,22 +1,26 @@
-
-
 <div class="image-gallery">
-  {% assign sorted = site.static_files | sort: 'date' | reverse %}
-  {% for file in sorted %}
-    {% assign include_folder = '/photos/thumbs/' %}
-    {% if file.path contains include_folder %}
-      {% if file.extname == '.jpg' %}
-        {% assign filenameparts = file.path | split: "/" %}
-        {% assign filename = filenameparts | last | replace: file.extname, "" %}
-
-        {% assign img_path = '/photos/img/' | append: filename | append: ".jpg" %}
-        <div class="box">
-          <a href="{{ img_path | relative_url }}" title="{{ filename }}">
-            <img src="{{ site.baseurl }}{{ include_folder }}{{ file.name }}" alt="{{ filename }}" class="img-gallery" />
-          </a>
-        </div>
-      {% endif %}
-    {% endif %}
-  {% endfor %}
+  {% assign sorted = site.static_files | sort: 'date' | reverse %} {% for file
+  in sorted %} {% assign include_folder = '/photos/thumbs/' %} {% if file.path
+  contains include_folder %} {% if file.extname == '.jpg' or file.extname ==
+  '.png' %} {% assign filenameparts = file.path | split: "/" %} {% assign
+  filename = filenameparts | last | replace: file.extname, "" %} {% assign
+  img_path = '/photos/img/' | append: filename | append: ".jpg" %}
+  <div class="box">
+    <a
+      href="{{ site.baseurl }}{{ img_path }}"
+      data-lightbox="gallery"
+      data-title="{{ filename }}"
+    >
+      <img
+        src="{{ site.baseurl }}{{ include_folder }}{{ file.name }}"
+        alt="{{ filename }}"
+        class="img-gallery"
+      />
+    </a>
+  </div>
+  {% endif %} {% endif %} {% endfor %}
 </div>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/lightbox2@2.11.3/dist/js/lightbox.min.js"></script>
