embed repo into page, modal for group photos

--- a/_includes/beer_cheese_festival_image_map.html
+++ b/_includes/beer_cheese_festival_image_map.html
@@ -12,21 +12,28 @@
       shape="rect"
       coords="4,154,217,289"
       href="/photos/uploads/PXL_20230610_crowds.jpg"
+      data-lightbox="my-gallery"
     />
     <area
       shape="rect"
       coords="4,295,217,436"
       href="/photos/uploads/PXL_20230610_dolcimer.jpg"
+      data-lightbox="my-gallery"
     />
     <area
       shape="rect"
       coords="220,2,434,151"
       href="/photos/uploads/PXL_20230610_blvd_sign.jpg"
+      data-lightbox="my-gallery"
     />
     <area
       shape="rect"
       coords="223,156,434,438"
       href="/photos/uploads/PXL_20230610_165422542.MP.jpg"
+      data-lightbox="my-gallery"
     />
   </map>
 </center>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/lightbox2@2.11.3/dist/js/lightbox.min.js"></script>
