--- a/_includes/blue_stallion_image_map.html
+++ b/_includes/blue_stallion_image_map.html
@@ -6,23 +6,35 @@
     border="0"
     usemap="#map"
   />
-
+  <!-- <a href="/images/image1.jpg" data-lightbox="my-gallery" data-title="Image 1">
+    <img src="/images/image1-thumbnail.jpg">-->
   <map name="map">
-    <area shape="rect" coords="4,3,257,436" href="/photos/uploads/image.jpg" />
+    <area
+      shape="rect"
+      coords="4,3,257,436"
+      href="/photos/uploads/image.jpg"
+      data-lightbox="my-gallery"
+    />
     <area
       shape="rect"
       coords="265,4,436,143"
       href="/photos/uploads/PXL_20230715_215002966.jpg"
+      data-lightbox="my-gallery"
     />
     <area
       shape="rect"
       coords="261,149,437,292"
       href="/photos/uploads/PXL_20230715_221103283.jpg"
+      data-lightbox="my-gallery"
     />
     <area
       shape="rect"
       coords="263,294,436,435"
       href="/photos/uploads/PXL_20230715_222002742.PORTRAIT.jpg"
+      data-lightbox="my-gallery"
     />
   </map>
 </center>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/lightbox2@2.11.3/dist/js/lightbox.min.js"></script>
