add blog post mirror twin

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -106,5 +106,24 @@
   <link
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/lightbox2@2.11.3/dist/css/lightbox.min.css"
+
   />
+
+  <!-- Google Analytics -->
+  {% if jekyll.environment == 'production' %}
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-GN9ZF5DQNN"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-GN9ZF5DQNN");
+  </script>
+  {% endif %}
 </head>
