--- a/_includes/head.html
+++ b/_includes/head.html
@@ -106,7 +106,6 @@
   <link
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/lightbox2@2.11.3/dist/css/lightbox.min.css"
-
   />
 
   <!-- Google Analytics -->
@@ -114,7 +113,7 @@
   <!-- Google tag (gtag.js) -->
   <script
     async
-    src="https://www.googletagmanager.com/gtag/js?id=G-GN9ZF5DQNN"
+    src="https://www.googletagmanager.com/gtag/js?id=G-N5VVGKCBJB"
   ></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -123,7 +122,7 @@
     }
     gtag("js", new Date());
 
-    gtag("config", "G-GN9ZF5DQNN");
+    gtag("config", "G-N5VVGKCBJB");
   </script>
   {% endif %}
 </head>
