--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -44,10 +44,14 @@
 /* Media query for smaller screens */
 @media (max-width: 768px) {
   h1 {
-    font-size: 1.25rem;
+    font-size: 2.25rem;
   }
 
   h3 {
-    font-size: 0.75rem;
+    font-size: 1.5rem;
   }
+}
+.navbar-custom.top-nav-regular .avatar-container {
+  width: 5.25rem;
+  bottom: -1.9375rem;
 }
