modal for mirror twin photos

--- a/_includes/mirror_twin_image_map.html
+++ b/_includes/mirror_twin_image_map.html
@@ -12,24 +12,28 @@
       shape="rect"
       coords="8,6,213,430"
       href="/photos/uploads/PXL_20230721_214043077-EDIT.jpg"
+      data-lightbox="my-gallery"
     />
     <area
       shape="rect"
       coords="224,5,326,217"
       href="/photos/uploads/PXL_20230721_213001786.PORTRAIT.ORIGINAL.jpg"
+      data-lightbox="my-gallery"
     />
     <area
       shape="rect"
       coords="330,8,432,215"
       href="/photos/uploads/PXL_20230721_231438598.jpg"
+      data-lightbox="my-gallery"
     />
     <area
       shape="rect"
       coords="223,226,433,430"
       href="/photos/uploads/PXL_20230721_212753170.MP.jpg"
+      data-lightbox="my-gallery"
     />
   </map>
 </center>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/lightbox2@2.11.4/dist/js/lightbox.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/lightbox2@2.11.3/dist/js/lightbox.min.js"></script>
