--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -2,7 +2,7 @@
 <link
   rel="preconnect"
   as="script"
-  href="https://www.googletagmanager.com/gtag/js?id=G-GN9ZF5DQNN"
+  href="https://www.googletagmanager.com/gtag/js?id=G-TNP8BL1KWB"
 />
 
 <script>
@@ -11,5 +11,5 @@
     dataLayer.push(arguments);
   }
   gtag("js", new Date());
-  gtag("config", G - GN9ZF5DQNN);
+  gtag("config", G - TNP8BL1KWB);
 </script>
